--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ auto:        false
 lsi:         false
 server_port: 4444
 pygments:    true
-markdown:    maruku
+markdown:    rdiscount
 permalink:   pretty
 postfiles:   true
 exclude:
