lol don't ship the rakefile

--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 destination: ./public
 
-permalink:   pretty
+permalink: pretty
 
 exclude:
-  - Thorfile
+  - Rakefile
   - Gemfile
   - Gemfile.lock
   - vendor
   - bin
 
-markdown:    redcarpet
+markdown: redcarpet
 redcarpet:
   extensions:
     - fenced_code
