[talks] fix typo h/t @morristhai

--- a/_data/talks.yaml
+++ b/_data/talks.yaml
@@ -1,5 +1,5 @@
 ---
-- title: From No OSS Experinece to the Core Team in 15 Minutes Per Day
+- title: From No OSS Experience to the Core Team in 15 Minutes Per Day
   description: Using and contributing to open source has been a cornerstone of the
     Ruby community for many years. Despite this strong tradition, it’s hard to find
     anything collecting the likely advantages and costs of working on open source.
